<?xml version="1.0" encoding="UTF-8"?>
<!-- 
 Dubsar Dictionary Project
 Copyright (C) 2010-14 Jimmy Dee
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
    	  android:icon="@drawable/ic_search"
          android:title="@string/menu_search"
          support:showAsAction="ifRoom" />
    <item android:id="@+id/preferences"
          android:icon="@drawable/ic_preferences"
    	  android:title="@string/menu_preferences" 
          support:showAsAction="ifRoom" />
    <item android:id="@+id/faq"
          android:icon="@drawable/ic_faq"
    	  android:title="@string/menu_faq"
          support:showAsAction="ifRoom"  />
    <item android:id="@+id/about"
          android:icon="@drawable/ic_info"
    	  android:title="@string/menu_about" 
          support:showAsAction="ifRoom" />
</menu>
