<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Dubsar Dictionary Project
 Copyright (C) 2010-11 Jimmy Dee
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/app_name"
    android:hint="@string/search_hint"
    android:searchSuggestAuthority="com.dubsar_dictionary.Dubsar.DubsarContentProvider"
    android:searchSuggestIntentAction="android.intent.action.SEARCH"
    android:searchSuggestIntentData="content://com.dubsar_dictionary.Dubsar.DubsarContentProvider/search"
    android:searchSuggestSelection=" ?"
    android:includeInGlobalSearch="true"
    android:searchSettingsDescription="@string/search_description"
    android:voiceSearchMode="showVoiceSearchButton|launchRecognizer">
</searchable>
