<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Dubsar Dictionary Project
 Copyright (C) 2010-11 Jimmy Dee
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gold_rectangle">
    <LinearLayout
	    android:id="@+id/dubsar_view"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:background="@drawable/black_rectangle">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"  >
			<Button 
				android:id="@+id/left_arrow"
				android:background="@drawable/wedge_l"
				android:layout_width="34dp"
				android:layout_height="fill_parent" />
		    <TextView
		        android:id="@+id/navigation_title"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
	 	        android:layout_gravity="center"
	 			android:gravity="center_horizontal"	       
	 			android:layout_margin="5dp"
		        android:text="@string/menu_preferences"
		        android:textStyle="bold"
		        android:textColor="#f58400"
		        style="@android:style/TextAppearance.Large" />
			<Button
			    android:id="@+id/right_arrow"
				android:background="@drawable/wedge_r"
				android:layout_width="34dp"
				android:layout_height="fill_parent" />
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1dp"
			android:background="@drawable/orange_horizontal_line" 
			android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
			<ToggleButton
			    android:id="@+id/wotd_notifications"
			    android:textOff="@string/disabled"
			    android:textOn="@string/enabled"
			    android:textStyle="bold"
			    android:layout_width="65dp"
			    android:layout_height="50dp"
			    android:layout_margin="5dp"
			    android:layout_gravity="center"
			    android:background="@drawable/rounded_gold_toggle_button"
			    android:padding="5dp"
			    android:drawableBottom="@drawable/rounded_gray_button" />
			<TextView
			    android:text="@string/wotd_notifications"
			    android:textStyle="bold"
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:layout_margin="5dp"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1dp"
			android:background="@drawable/orange_horizontal_line" 
			android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
			<Button
			    android:id="@+id/bg_data_change"
			    android:text="@string/change"
			    android:textStyle="bold"
			    android:layout_width="65dp"
			    android:layout_height="50dp"
			    android:layout_margin="5dp"
			    android:layout_gravity="center"
			    android:background="@drawable/rounded_gold_button"
			    android:padding="5dp" />
			<TextView
			    android:id="@+id/bg_data_setting"
			    android:text="@string/bg_data_on"
			    android:textStyle="bold"
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:layout_margin="5dp"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1dp"
			android:background="@drawable/orange_horizontal_line" 
			android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
		<LinearLayout android:id="@+id/wotd_service_control"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:visibility="invisible">
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
				<Button
				    android:id="@+id/wotd_time"
				    android:text="@string/change"
				    android:textStyle="bold"
				    android:layout_width="65dp"
				    android:layout_height="50dp"
				    android:layout_margin="5dp"
				    android:layout_gravity="center"
				    android:background="@drawable/rounded_gold_button"
				    android:padding="5dp" />
				<LinearLayout
				    android:orientation="vertical"
				    android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:layout_weight="1">
					<TextView
					    android:text="@string/wotd_time"
					    android:textStyle="bold"
					    android:layout_height="wrap_content"
					    android:layout_width="fill_parent"
					    android:layout_margin="5dp"/>
					<TextView
					    android:id="@+id/wotd_time_label"
					    android:textStyle="bold"
					    android:text="@string/loading"
					    android:layout_height="wrap_content"
					    android:layout_width="wrap_content"
					    android:layout_marginLeft="5dp"
					    android:padding="2dp"
					    android:textColor="#1c94c4"
					    android:background="@drawable/rounded_white_rectangle"/>
				</LinearLayout>
			</LinearLayout>
			<View android:layout_width="fill_parent" android:layout_height="1dp"
				android:background="@drawable/orange_horizontal_line" 
				android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
				<Button
				    android:id="@+id/wotd_purge"
				    android:text="@string/purge"
				    android:textStyle="bold"
				    android:layout_width="65dp"
				    android:layout_height="50dp"
				    android:layout_margin="5dp"
				    android:layout_gravity="center"
				    android:background="@drawable/rounded_gold_button"
				    android:padding="5dp" />
				<TextView
				    android:text="@string/wotd_cache"
				    android:textStyle="bold"
				    android:layout_height="wrap_content"
				    android:layout_width="fill_parent"
				    android:layout_margin="5dp"/>
			</LinearLayout>
			<View android:layout_width="fill_parent" android:layout_height="1dp"
				android:background="@drawable/orange_horizontal_line" 
				android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>