<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Dubsar Dictionary Project
 Copyright (C) 2010-11 Jimmy Dee
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/black_rectangle" >
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
		<Button 
			android:id="@+id/left_arrow"
			android:background="@drawable/wedge_l"
			android:layout_width="34dp"
			android:layout_height="fill_parent" />
		<ImageView android:src="@drawable/dubsar_link" android:layout_width="fill_parent"
	   		android:layout_height="wrap_content" android:layout_margin="10dp"
	   		 android:layout_weight="1"/>
		<Button
		    android:id="@+id/right_arrow"
			android:background="@drawable/wedge_r"
			android:layout_width="34dp"
			android:layout_height="fill_parent" />
	</LinearLayout>
	<View android:layout_width="fill_parent" android:layout_height="1dp"
		android:background="@drawable/orange_horizontal_line" 
		android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
	<TextView android:id="@+id/main_hello" 
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		style="@android:style/TextAppearance.Large"	
		android:textColor="#f58400" android:gravity="center_horizontal"
		android:text="@string/hello" android:layout_gravity="center" 
		android:layout_margin="25dp" />
	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1">
		<TextView android:id="@+id/main_wotd"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
		    style="@android:style/TextAppearance.Large" 
		    android:textColor="#f58400"
		    android:text="@string/wotd" android:layout_gravity="center" />
		<Button android:id="@+id/wotd_word" android:layout_width="wrap_content" 
			android:layout_height="wrap_content" android:textColor="#000"
			android:text="@string/loading" android:layout_gravity="center"
			android:ellipsize="end" android:padding="10dp" 
			android:background="@drawable/rounded_gold_button"/>
	</LinearLayout>
</LinearLayout>
