<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Dubsar Dictionary Project
 Copyright (C) 2010-11 Jimmy Dee
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gold_rectangle">
    <LinearLayout
	    android:id="@+id/dubsar_view"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@drawable/black_rectangle">
		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
			<Button 
				android:id="@+id/left_arrow"
				android:background="@drawable/wedge_l"
				android:layout_width="34dp"
				android:layout_height="fill_parent" />
		    <TextView
		        android:id="@+id/navigation_title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
	 	        android:layout_gravity="center"
	 			android:gravity="center_horizontal"	       
	 			android:layout_margin="5dp"
		        android:text="@string/menu_search"
		        android:textStyle="bold"
		        android:textColor="#f58400"
		        style="@android:style/TextAppearance.Large" />
			<Button 
				android:id="@+id/right_arrow"
				android:background="@drawable/wedge_r"
				android:layout_width="34dp"
				android:layout_height="fill_parent" />
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1dp"
			android:background="@drawable/orange_horizontal_line" 
			android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/rounded_gold_border"
		    android:layout_margin="1dp"
		    android:padding="1dp" >
			<TextView android:id="@+id/search_banner"
				android:layout_width="fill_parent" style="@android:style/TextAppearance.Large"
				android:layout_height="wrap_content" android:text="@string/loading" 
				android:textColor="#000" android:ellipsize="end" 
		        android:background="@drawable/rounded_orange_rectangle"
		        android:padding="5dp"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1dp"
			android:background="@drawable/orange_horizontal_line" 
			android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
		<ProgressBar
			android:id="@+id/loading_spinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_margin="25dp"
			style="@android:style/Widget.ProgressBar.Large"/>
		<ListView android:id="@+id/search_word_list"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_weight="1"
			android:divider="@drawable/black_horizontal_line" 
			android:visibility="gone"/>
		<LinearLayout
		    android:id="@+id/pagination"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:visibility="gone" >
		 	<Button
		 	    android:id="@+id/page_back"
		 	    android:layout_width="20dp"
		 	    android:layout_height="25dp"
		 	    android:layout_gravity="center_vertical"
		 	    android:background="@drawable/wedge_l" />
			<Spinner
			    android:id="@+id/search_page_spinner"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_gravity="center"
			    android:prompt="@string/search_page_prompt"
			    android:padding="4dp"
			    android:background="@drawable/rounded_orange_rectangle"/>
		 	<Button
		 	    android:id="@+id/page_forward"
		 	    android:layout_width="20dp"
		 	    android:layout_height="25dp"
		 	    android:layout_gravity="center_vertical"
		 	    android:background="@drawable/wedge_r" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
